SOE-2281: fix spacing around Stanford | Engineering

--- a/css/soe_helper.css
+++ b/css/soe_helper.css
@@ -1947,7 +1947,16 @@ body:not(.page-admin) .sidebar .views-exposed-form .views-exposed-widget .form-s
 .page-magazine-all #header #logo img,
 .node-type-stanford-magazine-article #header #logo img {
   max-width: 90px; }
-/* line 20, ../scss/components/_soe_dm_brand_bar.scss */
+@media (max-width: 480px) {
+  /* line 19, ../scss/components/_soe_dm_brand_bar.scss */
+  .node-type-stanford-magazine-issue #header #logo.logo-mobile,
+  .page-taxonomy-term #header #logo.logo-mobile,
+  .node-type-stanford-magazine-issue #header #logo.logo-mobile,
+  .page-magazine #header #logo.logo-mobile,
+  .page-magazine-all #header #logo.logo-mobile,
+  .node-type-stanford-magazine-article #header #logo.logo-mobile {
+    padding: 0 5px 0 0; } }
+/* line 26, ../scss/components/_soe_dm_brand_bar.scss */
 .node-type-stanford-magazine-issue #header.header,
 .page-taxonomy-term #header.header,
 .node-type-stanford-magazine-issue #header.header,
@@ -1956,7 +1965,7 @@ body:not(.page-admin) .sidebar .views-exposed-form .views-exposed-widget .form-s
 .node-type-stanford-magazine-article #header.header {
   min-height: 45px;
   padding: 20px 0 0; }
-/* line 25, ../scss/components/_soe_dm_brand_bar.scss */
+/* line 31, ../scss/components/_soe_dm_brand_bar.scss */
 .node-type-stanford-magazine-issue #header #site-title-first-line.site-title-uppercase,
 .page-taxonomy-term #header #site-title-first-line.site-title-uppercase,
 .node-type-stanford-magazine-issue #header #site-title-first-line.site-title-uppercase,
@@ -1965,6 +1974,15 @@ body:not(.page-admin) .sidebar .views-exposed-form .views-exposed-widget .form-s
 .node-type-stanford-magazine-article #header #site-title-first-line.site-title-uppercase {
   font-size: 18px;
   margin-bottom: -3px; }
+@media (max-width: 480px) {
+  /* line 36, ../scss/components/_soe_dm_brand_bar.scss */
+  .node-type-stanford-magazine-issue #header #name-and-slogan.with-logo,
+  .page-taxonomy-term #header #name-and-slogan.with-logo,
+  .node-type-stanford-magazine-issue #header #name-and-slogan.with-logo,
+  .page-magazine #header #name-and-slogan.with-logo,
+  .page-magazine-all #header #name-and-slogan.with-logo,
+  .node-type-stanford-magazine-article #header #name-and-slogan.with-logo {
+    padding: 0 0 0 5px; } }
 
 @media (max-width: 767px) {
   /* line 16, ../scss/components/_soe_dm_navigation.scss */
